# AutoRDF

./: .gitignore  .gitlab-ci.yml  .gitlab.yml  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  autordf-ontology.pc.in  autordf.pc.in  autordfConfig.cmake.in  meson.build  meson.options  setup.py
.devcontainer/: devcontainer.json
conda/: build.sh  meta.yaml
debian/: changelog  control  files  libautordf-dev.install  libautordf-ontology0.install  libautordf0.install  rules
doc/: CMakeLists.txt  Doxyfile.in  example.cpp  geometry.owl  geometry.ttl  meson.build
docker/: Dockerfile.buildconda  Dockerfile.devcontainer
docker/keyring/: irma_rsa.pub  known_hosts
include/autordf/: Exception.h  Facade.h  Factory.h  I18String.h  I18StringVector.h  INotifier.h  Model.h  Node.h  NodeList.h  NodeType.h  Object.h  Property.h  PropertyValue.h  PropertyValueList.h  PropertyValueVector.h  Resource.h  ResourceList.h  Statement.h  StatementList.h  Storage.h  Uri.h  cAPI.h
include/autordf/cvt/: Cvt.h  RdfTypeEnum.h
include/autordf/notification/: ANotifier.h  DefaultNotifier.h  NotifierLocker.h
include/autordf/ontology/: AnnotationProperty.h  DataProperty.h  Klass.h  ObjectProperty.h  Ontology.h  Property.h  RdfsEntity.h  Validator.h
java/: CMakeLists.txt
java/src/main/com/github/ariadnext/autordf/: AutoRdfConfig.java
meson_include/autordf/: autordf_export.h
meson_include/autordf/ontology/: autordf-ontology_export.h
recipe/: build.sh  conda_build_config.yaml   meta.yaml
src/autordf/: CMakeLists.txt  Exception.cpp  Factory.cpp  I18String.cpp  I18StringVector.cpp  Model.cpp  ModelPrivate.cpp  ModelPrivate.h  Node.cpp  NodeList.cpp  NodeType.cpp  Object.cpp  Parser.cpp  Parser.h  Property.cpp  PropertyValue.cpp  PropertyValueList.cpp  PropertyValueVector.cpp  Resource.cpp  ResourceList.cpp  Statement.cpp  StatementConverter.cpp  StatementConverter.h  StatementList.cpp  Storage.cpp  Storage.h  Stream.cpp  Stream.h  Uri.cpp  Uri.h  World.cpp  World.h  meson.build
src/autordf/codegen/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  DataProperty.cpp  DataProperty.h  Environment.cpp  Environment.h  Klass.cpp  Klass.h  ObjectProperty.cpp  ObjectProperty.h  Property.cpp  Property.h  RdfsEndity.cpp  RdfsEndity.h  RdfsEntity.cpp  RdfsEntity.h  Utils.cpp  Utils.h  UtilsCommon.cpp  UtilsCommon.h  main.cpp  meson.build
src/autordf/codegen/cpp/: CppCodeGenerator.cpp  CppCodeGenerator.h  CppKlass.cpp  CppKlass.h
src/autordf/codegen/cpp/unittests/: CMakeLists.txt  TestCodeGen.cpp  TestMrd.cpp  meson.build
src/autordf/codegen/python/: CMakeLists.txt  DataPropertyPython.cpp  DataPropertyPython.h  KlassPython.cpp  KlassPython.h  ObjectPropertyPython.cpp  ObjectPropertyPython.h  PythonCodeGenerator.cpp  PythonCodeGenerator.h  PythonKlass.cpp  PythonKlass.h  RdfsEntityPython.cpp  RdfsEntityPython.h  UtilsPython.cpp  UtilsPython.h  main.cpp
src/autordf/codegen/python/unittests/: CMakeLists.txt  CodegenUnitTests.py  example.ttl  meson.build
src/autordf/codegen/templates/cpp/: all_in_one.tpl  all_inclusions.tpl  class_declaration.tpl  class_definition.tpl  comment.tpl  enter_internal.tpl  enter_namespace.tpl  interface_declaration.tpl  interface_definition.tpl  leave_internal.tpl  leave_namespace.tpl  property_comment.tpl
src/autordf/codegen/templates/cpp/data_property/: data_property_declaration.tpl  data_property_definition.tpl  getter_for_many.tpl  getter_for_one_mandatory.tpl  getter_for_one_optional.tpl  key_declaration.tpl  remover.tpl  setter_for_many.tpl  setter_for_one.tpl
src/autordf/codegen/templates/cpp/object_property/: key_declaration.tpl  object_property_declaration.tpl  object_property_definition.tpl  remover_declaration.tpl  remover_definition.tpl  setter_for_many_declaration.tpl  setter_for_many_definition.tpl  setter_for_one_declaration.tpl  setter_for_one_definition.tpl
src/autordf/codegen/templates/python/: class.tpl  comment.tpl  init.tpl  interface.tpl  property_comment.tpl
src/autordf/codegen/templates/python/data_property/: data_property.tpl  getter_for_many.tpl  getter_for_one_mandatory.tpl  getter_for_one_optional.tpl  key.tpl  remover.tpl  setter_for_many.tpl  setter_for_one.tpl
src/autordf/codegen/templates/python/object_property/: getter_for_many.tpl  getter_for_one_mandatory.tpl  getter_for_one_optional.tpl  key.tpl  object_property.tpl  remover.tpl  setter_for_many.tpl  setter_for_one.tpl
src/autordf/codegen/unittests/: CMakeLists.txt  MachineReadableDocument.owl  MachineReadableDocument.ttl  TestCodeGen.cpp  foaf_20140114.ttl
src/autordf/cvt/: RdfTypeEnum.cpp
src/autordf/internal/: Iterator.h  ModelPrivate.cpp  ModelPrivate.h  NodeConverter.cpp  NodeConverter.h  Parser.cpp  Parser.h  StatementConverter.cpp  StatementConverter.h  Storage.cpp  Storage.h  Stream.cpp  Stream.h  Uri.cpp  Uri.h  World.cpp  World.h  cAPI.h
src/autordf/notification/: ANotifier.cpp  DefaultNotifier.cpp  NotifierLocker.cpp
src/autordf/ontology/: AnnotationProperty.cpp  CMakeLists.txt  DataProperty.cpp  Klass.cpp  ObjectProperty.cpp  Ontology.cpp  Property.cpp  RdfsEndity.cpp  RdfsEntity.cpp  Validator.cpp  meson.build
src/autordf/ontology/unittests/: 01_ValidatorUnitTests.cpp  05_ValidatorUnitTests.cpp  geometry-ontology.ttl  geometry.owl  geometry.ttl  schema.ttl
src/autordf/pybind/: FactoryPybind.cpp  I18StringPybind.cpp  ModelPybind.cpp  ObjectPybind.cpp  PropertyValuePybind.cpp  PybindModule.cpp  UriPybind.cpp  meson.build
src/autordf/pybind/unittests/: ObjectUnitTests.py  foafExample.ttl
src/autordf/tools/: AutoRdfCodeGen.cpp  CMakeLists.txt
src/autordf/tools/unittests/: CMakeLists.txt  MachineReadableDocument.owl  TestCodeGen.cpp
src/autordf/uml/: CMakeLists.txt  main_puml.cpp  meson.build
src/autordf/unittests/: 01_ModelUnitTests.cpp  02_LoadSaveUnitTests.cpp  03_ObjectlUnitTests.cpp  04_cvtUnitTests.cpp  05_PropertyValueUnitTests.cpp  ModelUnitTests.cpp  blankprefix.ttl  bob.ttl  example2.ttl  foafExample.rdf  john.ttl
src/autordf/xmi/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  meson.build  perftest.cpp
