CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( autordf CXX C )

INCLUDE( FindPkgConfig )
INCLUDE( GNUInstallDirs )

#Used to create symbolic links in shared libraries
SET(SOLIBVERSION "1.0")

PKG_SEARCH_MODULE( REDLAND REQUIRED redland)
FIND_PACKAGE( Threads )

INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}/include"
    "${PROJECT_SOURCE_DIR}/src"
    "${PROJECT_SOURCE_DIR}/src/autordf"
    "${PROJECT_BINARY_DIR}/include"
    "${PROJECT_BINARY_DIR}/src"
    "${REDLAND_INCLUDE_DIRS}"
)

LINK_DIRECTORIES(
    ${LIBRARY_OUTPUT_PATH}
    ${OPENCV_LIBRARY_DIRS}
    ${REDLAND_LIBRARY_DIRS}
)

SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -O2" )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -fPIC" )

IF("${LIBRARY_TYPE}" STREQUAL "")
    SET(LIBRARY_TYPE SHARED)
ENDIF()

IF("${BUILD_TESTS}" STREQUAL "")
    SET(BUILD_TESTS 1)
ENDIF()

IF("${BUILD_DOC}" STREQUAL "")
    SET(BUILD_DOC 0)
ENDIF()

IF("${BUILD_TOOLS}" STREQUAL "")
    SET(BUILD_TOOLS 1)
ENDIF()

ADD_SUBDIRECTORY(src/autordf)

if(${BUILD_TESTS} STREQUAL "1")
    ADD_SUBDIRECTORY(tests)
endif()

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/autordf.pc.in"
  "${PROJECT_BINARY_DIR}/autordf.pc"
)

INSTALL(FILES
  "${PROJECT_BINARY_DIR}/autordf.pc"
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/autordf-ontology.pc.in"
  "${PROJECT_BINARY_DIR}/autordf-ontology.pc"
)

INSTALL(FILES
  "${PROJECT_BINARY_DIR}/autordf-ontology.pc"
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

INSTALL(DIRECTORY
    ${CMAKE_SOURCE_DIR}/include/${PROJECT_NAME}

    DESTINATION include/
)

IF(BUILD_DOC)
    ADD_SUBDIRECTORY(doc)
ENDIF()
