CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( autordf CXX C )

INCLUDE( FindPkgConfig )
INCLUDE( GNUInstallDirs )

#Used to create symbolic links in shared libraries
SET(SOLIBVERSION "1.0")

IF("${RDF_C_API}" STREQUAL "")
    SET(RDF_C_API REDLAND)
ENDIF()

IF( "${RDF_C_API}" STREQUAL "REDLAND" )
    PKG_SEARCH_MODULE( REDLAND REQUIRED redland )
    SET(RDF_C_API_INCLUDE_DIRS ${REDLAND_INCLUDE_DIRS})
    SET(RDF_C_API_LIBRARY_DIRS ${REDLAND_LIBRARY_DIRS})
    SET(RDF_C_API_LIBRARIES ${REDLAND_LIBRARIES})
    ADD_DEFINITIONS("-DUSE_REDLAND")
    SET(PKGCONFIG_EXTRA_CFLAGS "-DUSE_REDLAND")
    SET(PKGCONFIG_REQUIRES_PRIVATE "redland >= 1.0.15, raptor2 >= 2.0.8")
ENDIF()

IF( "${RDF_C_API}" STREQUAL "SORD" )
    PKG_SEARCH_MODULE( SORD REQUIRED sord-0 )
    SET(RDF_C_API_INCLUDE_DIRS ${SORD_INCLUDE_DIRS})
    SET(RDF_C_API_LIBRARY_DIRS ${SORD_LIBRARY_DIRS})
    SET(RDF_C_API_LIBRARIES ${SORD_LIBRARIES})
    ADD_DEFINITIONS("-DUSE_SORD")
    SET(PKGCONFIG_EXTRA_CFLAGS "-DUSE_SORD")
    SET(PKGCONFIG_REQUIRES_PRIVATE "serd-0, sord-0")
ENDIF()

FIND_PACKAGE( Threads )

INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}/include"
    "${PROJECT_SOURCE_DIR}/src"
    "${PROJECT_SOURCE_DIR}/src/autordf"
    "${PROJECT_BINARY_DIR}/include"
    "${PROJECT_BINARY_DIR}/src"
    "${RDF_C_API_INCLUDE_DIRS}"
)

LINK_DIRECTORIES(
    ${LIBRARY_OUTPUT_PATH}
    ${OPENCV_LIBRARY_DIRS}
    ${RDF_C_API_LIBRARY_DIRS}
    ${SORD_LIBRARY_DIRS}
)

SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -O2" )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wunused-parameter -Wunused-variable -fPIC" )

IF("${LIBRARY_TYPE}" STREQUAL "")
    SET(LIBRARY_TYPE SHARED)
ENDIF()

IF("${BUILD_TESTS}" STREQUAL "")
    SET(BUILD_TESTS 1)
ENDIF()

IF("${BUILD_DOC}" STREQUAL "")
    SET(BUILD_DOC 0)
ENDIF()

IF("${BUILD_TOOLS}" STREQUAL "")
    SET(BUILD_TOOLS 1)
ENDIF()

IF("${LIBRDF_IN_SUBDIRS}" STREQUAL "1")
    ADD_DEFINITIONS("-DLIBRDF_IN_SUBDIRS")
ENDIF()

ADD_SUBDIRECTORY(src/autordf)

if(${BUILD_TESTS} STREQUAL "1")
    ADD_SUBDIRECTORY(tests)
endif()

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/autordf.pc.in"
  "${PROJECT_BINARY_DIR}/autordf.pc"
)

INSTALL(FILES
  "${PROJECT_BINARY_DIR}/autordf.pc"
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/autordf-ontology.pc.in"
  "${PROJECT_BINARY_DIR}/autordf-ontology.pc"
)

INSTALL(FILES
  "${PROJECT_BINARY_DIR}/autordf-ontology.pc"
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

INSTALL(DIRECTORY
    ${CMAKE_SOURCE_DIR}/include/${PROJECT_NAME}

    DESTINATION include/
)

IF(BUILD_DOC)
    ADD_SUBDIRECTORY(doc)
ENDIF()
